[package]
name = "edn-derive"
version = "0.3.2"
authors = ["Otavio Pace <otaviopp8@gmail.com>", "Julia Boeira <julia.boeira@nubank.com.br>"]
description = "Edn (De)Serialization derive macros"
edition = "2018"
readme = "README.md"
keywords = ["edn"]
documentation = "https://docs.rs/edn-derive/"
repository = "https://github.com/otaviopace/edn-derive"
license = "LGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
edn-rs = "0.13.4"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
