[package]
name = "edn-derive"
version = "0.6.0"
authors = ["Eva Pace <eba.pachi@gmail.com>", "Julia Boeira <julia.boeira@nubank.com.br>"]
description = "Edn (De)Serialization derive macros"
edition = "2021"
readme = "README.md"
keywords = ["edn"]
documentation = "https://docs.rs/edn-derive/"
repository = "https://github.com/edn-rs/edn-derive"
license = "LGPL-3.0"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
edn-rs = { git = "https://github.com/edn-rs/edn-rs.git" } # TODO lock in version once stable

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
criterion = "0.5"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[[bench]]
name = "deserialize"
harness = false
